--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rocket-league-mafia-bot",
-  "version": "1.2.8",
+  "version": "1.2.9",
   "main": "index.js",
-  "license": "WTFPL",
+  "license": "Apache-2.0",
   "scripts": {
     "start": "node build/index.js",
     "watch": "tsc --watch",
